# hosting

./: .gitignore  .gitlab-ci.yml  CHARTE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  stack.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  openapi.json  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_domains_catalog_column.py  0002_add_vm_pending_changes.py  0002_drop_unique_ssh_per_vm.py  0003_add_domains_options_column.py  0003_drop_needs_reset.py  0004_add_pdns_schema.py  0004_add_vm_pending_changes.py  0005_add_requests.py  0005_add_template_version_resources_comment.py  0006_add_vm_purge_mails_and_ip_history.py  0006_backfill_missing_dns_records.py  0007_add_template_is_active.py  0007_add_vm_security.py  0008_add_cpes_to_security_findings.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  admin.py  api.py  auth.py  charter.py  health.py
backend/app/auth/: __init__.py  context.py
backend/app/core/: __init__.py  config.py  maintenance.py  rate_limit.py  templates.py
backend/app/core/security/: __init__.py  token.py
backend/app/core/sessions/: __init__.py  store.py
backend/app/db/: __init__.py
backend/app/db/core/: __init__.py  engine.py  lifecycle.py  session.py
backend/app/db/models/: __init__.py  quota_lock.py  request.py  (+7 more)
backend/app/services/: __init__.py  charter.py  discord.py  dns.py  email.py  wordgen.py
backend/scripts/: export_openapi.py
(+155 files in other folders)
